syntax = "proto3";

option java_multiple_files = true;
option java_package = "example.akka.actortest.grpc";
option java_outer_classname = "SmsActorGrpc";

package actortest;

////////////////////////////////////// The greeting service definition.
service SmsGrpcService {
    rpc sendSms (SmsRequest) returns (SmsReply) {}
}

// The request message containing the user's name.
message SmsRequest {
    string from = 1;
    string to = 2;
    string sms = 3;

}

// The response message containing the greetings
message SmsReply {
    string from = 1;
    string to = 2;
    string sms = 3;
}
